--- a/resources/sass/_admin.scss
+++ b/resources/sass/_admin.scss
@@ -8,9 +8,26 @@ body{
 	font-size: 14px;
 	line-height: 1.8;
 	font-weight: normal;
-	background: #fafafa;
+	// background: #3f3f3f;
 	color: lighten($black,50%);
-	margin-bottom: 5em !important;
+	// margin-bottom: 5em !important;
+}
+.min-h{
+	min-height: 40rem;
+}
+
+.app-body{
+	// min-height: 45rem;
+	// position: absolute;
+	height: auto;
+}
+.footer{
+	// position: absolute; 
+	bottom: 0 !important; 
+	left: 0; 
+	width: 100%;
+    // z-index: 10;
+	
 }
 .bg-header{
 	background-color: $bg-header !important;
@@ -24,6 +41,15 @@ body{
     border-color:$primary !important;
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgba(13, 253, 113, 0.25) !important;
+}
+
+.form-select:focus {
+    border-color:$primary !important;
+    outline: 0;
+	box-shadow: 0 0 0 0.25rem rgba(13, 253, 113, 0.25) !important;
+	.option:focus{
+		background-color: #26884b !important;
+	}
 }
 .text-primary{
 	color:$primary !important;
@@ -50,7 +76,7 @@ h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
 	line-height: 1.5;
 	font-weight: 600;
-	font-size: 1.7rem;
+	font-size: 1.3rem;
 	font-family: $font-primary;
 	color: $primary;
 }
@@ -127,12 +153,12 @@ h1, h2, h3, h4, h5,
 	    li{
 	    	font-size: 14px;
 	    	a{
-                padding: 10px 0;
-                text-decoration: none;
+                padding: 5px 0;
+				text-decoration: none;
 			    span{
 			    	margin-right: 0;
 		    		display: block;
-		    		font-size: 24px;
+		    		font-size: 22px;
 			    }
 			  }
 	    }
@@ -237,7 +263,7 @@ a[data-toggle="collapse"] {
 }
 
 .footer{
-	padding: 0 30px;
+	// padding: 0 30px;
 	@include media-breakpoint-down(md){
 		display: none;
 	}
@@ -262,17 +288,5 @@ a[data-toggle="collapse"] {
 	}
 }
 
-.container-body{
-	min-height: 45em;
-}
 
-.footer{
-	min-height: 5em;
-	background: #1a6837;
-	color: #fff !important; 
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	z-index: 999 !important;
-}
+
