--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -1,6 +1,6 @@
 body{
-    margin-top:20px;
-    background-color: #f7f7ff;
+    // margin-top:20px;
+    background-color: #e1e1e1;
     }
     .card {
         position: relative;
