--- a/resources/sass/_pagination.scss
+++ b/resources/sass/_pagination.scss
@@ -175,8 +175,9 @@ $color-primary: #26884b;
     // padding: 0px !important;
     text-align:end !important;
     font-weight: bold;
+    margin-top: 10px;
     .description{
-        margin-top: -6px !important;
+        margin-top: 6px !important;
         padding: 0 !important;
         font-weight: normal !important;
     }
