doc viewc update

--- a/resources/sass/_pagination.scss
+++ b/resources/sass/_pagination.scss
@@ -45,6 +45,7 @@ $color-primary: #26884b;
 
 .img-user{
     width: 3rem !important;
+    height: 3rem;
     margin: 0px !important;
     margin-right: 6px !important;
     padding: 0px !important;;
