--- a/resources/sass/_admin.scss
+++ b/resources/sass/_admin.scss
@@ -6,7 +6,7 @@ $font-primary: "Arial";
 body{
 	// font-family: $font-primary;
 	font-size: 14px;
-	line-height: 1.8;
+	// line-height: 1.8;
 	font-weight: normal;
 	// background: #3f3f3f;
 	color: lighten($black,50%);
